--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,3 @@
-/* Importo i file di base, componenti e utility di Tailwind CSS */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
